# cake-mlir

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
cmake/: MLIR.cmake  config.cmake  dlpack.cmake  llvm-hash.txt  stablehlo.cmake  targets.cmake  toolchain.cmake  torch-mlir.cmake
example/: .gitignore  trans.sh
example/conv2d/: main.py
example/mlir/test_stablehlo/: main.sh
example/python/: main.py
example/python/ctypes_test/: Makefile  main.cc  main.py
example/python/llvmir/: main.py
example/python/onnx_importer/: main.py
example/python/stablehlo/: main.py
example/python/test/: main.py
example/python/torch_importer/: CMakeLists.txt  batch_norm.py  main.py  out.mlir  runtime.cc  runtime.py  test.py
example/python/tosa/: main.py
example/resnet18/: CMakeLists.txt  main.py  runtime.cc
example/toy/: codegen.toy  main.sh
include/cake-mlir/: InitAll.h
include/cake-mlir-c/: tensor.h
include/cake-mlir/Conversion/Toy/: CMakeLists.txt  ToyConversion.h  ToyConversion.td  ToyToStandard.h  ToyToStandard.td
include/cake-mlir/Dialect/: CMakeLists.txt  CakeDialect.td
include/cake-mlir/Dialect/Cake/: CMakeLists.txt  CakeDialect.h  CakeDialect.td  CakeOps.h  CakeOps.td
include/cake-mlir/Dialect/Toy/: CMakeLists.txt  ToyDialect.h  ToyDialect.td  ToyInterface.h  ToyInterface.td  ToyOps.h  ToyOps.td  ToyPatterns.td  ToyTypes.h  ToyTypes.td
include/cake-mlir/Runtime/: module.h  tensor.h  types.h
include/cake-mlir/Transform/: CMakeLists.txt
include/cake-mlir/Transform/Toy/: CMakeLists.txt  Passes.h  Passes.td
include/cake-mlir/Transform/learn/: CMakeLists.txt  LearnPass.td  learn.h
include/cake-mlir/runtime/: module.h  tensor.h
lib/: CMakeLists.txt  InitAll.cc
lib/Bindings/Python/: PythonTest.cc  Runner.cc  Runtime.cc
lib/CAPI/: CMakeLists.txt  tensor.cc
lib/Conversion/: CMakeLists.txt
lib/Conversion/Toy/: CMakeLists.txt  ToyToLLVM.cc  ToyToStandard.cc
lib/Dialect/: CMakeLists.txt
lib/Dialect/Cake/: CMakeLists.txt  CakeDialect.cc  CakeOps.cc
lib/Dialect/Toy/: CMakeLists.txt  ToyDialect.cc  ToyOps.cc
lib/Runtime/: CMakeLists.txt  module.cc  tensor.cc
lib/Transform/Toy/: CMakeLists.txt  ShapeInference.cc
lib/Transform/learn/: CMakeLists.txt  learn.cc
lib/runtime/: tensor.cc
lib/toy_parser/: CMakeLists.txt  MLIRGen.cc
python/: CMakeLists.txt
python/cake_mlir/: __init__.py
python/cake_mlir/Runtime/: executor.py
python/cake_mlir/ds/: __init__.py  module.py
python/cake_mlir/frontend/: __init__.py
python/cake_mlir/frontend/onnx/: onnx_importer.py
python/cake_mlir/frontend/torch/: torch_importer.py
python/cake_mlir/structure/: module.py
python/cake_mlir/test/: __init__.py  cake_py_test.py
python/cake_mlir/transform/: __init__.py  basic.py  build_module.py  transform.py
python/cake_mlir/transform/passes/: passes.py
python/cake_mlir/utils/: common.py
scripts/: base.sh  build.sh
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/mlir/: cake_dialect.mlir  hlo.mlir  test.mlir
tests/toy/: codegen.toy  empty.toy  scalar.toy  shape_inference.mlir  transpose_transpose.toy  trivial_reshape.toy
tools/: CMakeLists.txt
tools/cake-mlir/: CMakeLists.txt  cake-mlir.cc
tools/cake-opt/: CMakeLists.txt  cake-opt.cc
tools/cake-translate/: CMakeLists.txt  cake-translate.cc
tools/toyc/: CMakeLists.txt  toyc.cc
